[project]
name = "vaspy"
version = "0.5.3"
description = "Add a short description here"
authors = [{ name = "Ryuichi Arafune", email = "ryuichi.arafune@gmail.com" }]
dependencies = ["numpy>=1.24.4"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
ignore = [
  "ANN101",
  "G004",
  "S101",
  "T201",
  "D105",
  "PD011",  # pandas-use-of-dot-values
  "FBT002", # boolean-default-value-in-function-definition
]
select = ["ALL"]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D100", "PLR2004"] # undocumented-public-module
